[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/GameUI.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/ItemGiver.gd" type="Script" id=3]
[ext_resource path="res://Scripts/GameScene.gd" type="Script" id=5]
[ext_resource path="res://Tilesets/new_tileset.tres" type="TileSet" id=6]
[ext_resource path="res://Scenes/Enemy.tscn" type="PackedScene" id=17]

[node name="GameScene" type="Node2D"]
script = ExtResource( 5 )

[node name="UICanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" parent="UICanvasLayer" instance=ExtResource( 2 )]

[node name="ItemSelect" parent="UICanvasLayer/UI" index="5"]
visible = false

[node name="BackgroundTileMap" type="TileMap" parent="."]
visible = false
tile_set = ExtResource( 6 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -327689, 1073741826, 65553, -327688, 1073741826, 65553, -327687, 1073741826, 65553, -327686, 1073741826, 65553, -327685, 1073741826, 65553, -327684, 1073741826, 65553, -327683, 1073741826, 65553, -327682, 1073741826, 65553, -327681, 1073741826, 65553, -393216, 1073741826, 65553, -393215, 1073741826, 65553, -393214, 1073741826, 65553, -393213, 1073741826, 65553, -393212, 1073741826, 65553, -393211, 1073741826, 65553, -393210, 1073741826, 65553, -393209, 1073741826, 65553, -393208, 1073741826, 65553, -393207, 1073741826, 65553, -393206, 1073741826, 65553, -393205, 1073741826, 65553, -262153, 1073741826, 131081, -262152, 1073741826, 65553, -262151, 1073741826, 65553, -262150, 1073741826, 65553, -262149, 1073741826, 65553, -262148, 1073741826, 65553, -262147, 1073741826, 65553, -262146, 1073741826, 65553, -262145, 1073741826, 65553, -327680, 1073741826, 65553, -327679, 1073741826, 65553, -327678, 1073741826, 16, -327677, 1073741826, 65553, -327676, 1073741826, 65553, -327675, 1073741826, 65553, -327674, 1073741826, 65553, -327673, 1073741826, 65553, -327672, 1073741826, 65553, -327671, 1073741826, 65553, -327670, 1073741826, 65553, -327669, 1073741826, 65553, -196617, 1073741826, 131081, -196616, 1073741826, 65553, -196615, 1073741826, 65553, -196614, 1073741826, 65553, -196613, 1073741826, 65553, -196612, 1073741826, 65553, -196611, 1073741826, 65553, -196610, 1073741826, 16, -196609, 1073741826, 65553, -262144, 1073741826, 16, -262143, 1073741826, 65553, -262142, 1073741826, 65553, -262141, 1073741826, 65553, -262140, 1073741826, 65553, -262139, 1073741826, 65553, -262138, 1073741826, 65553, -262137, 1073741826, 65553, -262136, 1073741826, 65553, -262135, 1073741826, 65553, -262134, 1073741826, 65553, -262133, 1073741826, 65553, -131081, 1073741826, 131081, -131080, 1073741826, 65553, -131079, 1073741826, 65553, -131078, 1073741826, 65553, -131077, 1073741826, 65553, -131076, 1073741826, 65553, -131075, 1073741826, 65553, -131074, 1073741826, 65553, -131073, 1073741826, 65553, -196608, 1073741826, 65553, -196607, 1073741826, 65553, -196606, 1073741826, 65553, -196605, 1073741826, 65553, -196604, 1073741826, 65553, -196603, 1073741826, 65553, -196602, 1073741826, 65553, -196601, 1073741826, 65553, -196600, 1073741826, 65553, -196599, 1073741826, 16, -196598, 1073741826, 65553, -196597, 1073741826, 65553, -65545, 1073741826, 131081, -65544, 1073741826, 65553, -65543, 1073741826, 16, -65542, 1073741826, 65553, -65541, 1073741826, 65553, -65540, 1073741826, 65553, -65539, 1073741826, 65553, -65538, 1073741826, 65553, -65537, 1073741826, 65553, -131072, 1073741826, 65553, -131071, 1073741826, 65553, -131070, 1073741826, 65553, -131069, 1073741826, 65553, -131068, 1073741826, 65553, -131067, 1073741826, 65553, -131066, 1073741826, 65553, -131065, 1073741826, 65553, -131064, 1073741826, 65553, -131063, 1073741826, 65553, -131062, 1073741826, 65553, -131061, 1073741826, 65553, -9, 1073741826, 131081, -8, 1073741826, 65553, -7, 1073741826, 65553, -6, 1073741826, 65553, -5, 1073741826, 65553, -4, 1073741826, 65553, -3, 1073741826, 65553, -2, 1073741826, 65553, -1, 1073741826, 65553, -65536, 1073741826, 65553, -65535, 1073741826, 65553, -65534, 1073741826, 65553, -65533, 1073741826, 65553, -65532, 1073741826, 65553, -65531, 1073741826, 65553, -65530, 1073741826, 16, -65529, 1073741826, 65553, -65528, 1073741826, 65553, -65527, 1073741826, 65553, -65526, 1073741826, 65553, -65525, 1073741826, 65553, 65527, 1073741826, 131081, 65528, 1073741826, 65553, 65529, 1073741826, 65553, 65530, 1073741826, 65553, 65531, 1073741826, 65553, 65532, 1073741826, 65553, 65533, 1073741826, 65553, 65534, 1073741826, 65553, 65535, 1073741826, 65553, 0, 1073741826, 65553, 1, 1073741826, 65553, 2, 1073741826, 65553, 3, 1073741826, 65553, 4, 1073741826, 65553, 5, 1073741826, 16, 6, 1073741826, 16, 7, 1073741826, 16, 8, 1073741826, 16, 9, 1073741826, 65553, 10, 1073741826, 65553, 11, 1073741826, 65553, 131063, 1073741826, 131081, 131064, 1073741826, 65553, 131065, 1073741826, 65553, 131066, 1073741826, 65553, 131067, 1073741826, 65553, 131068, 1073741826, 65553, 131069, 1073741826, 16, 131070, 1073741826, 65553, 131071, 1073741826, 65553, 65536, 1073741826, 65553, 65537, 1073741826, 65553, 65538, 1073741826, 65553, 65539, 1073741826, 16, 65540, 1073741826, 65553, 65541, 1073741826, 16, 65542, 1073741826, 16, 65543, 1073741826, 16, 65544, 1073741826, 16, 65545, 1073741826, 65553, 65546, 1073741826, 65553, 65547, 1073741826, 65553, 196599, 1073741826, 131081, 196600, 1073741826, 65553, 196601, 1073741826, 65553, 196602, 1073741826, 65553, 196603, 1073741826, 65553, 196604, 1073741826, 65553, 196605, 1073741826, 65553, 196606, 2, 16, 196607, 1073741826, 65553, 131072, 1073741826, 65553, 131073, 1073741826, 65553, 131074, 1073741826, 65553, 131075, 1073741826, 16, 131076, 1073741826, 16, 131077, 1073741826, 16, 131078, 1073741826, 16, 131079, 1073741826, 16, 131080, 1073741826, 16, 131081, 1073741826, 16, 131082, 1073741826, 65553, 131083, 1073741826, 65553, 262135, 1073741826, 131081, 262136, 1073741826, 65553, 262137, 1073741826, 16, 262138, 1073741826, 65553, 262139, 1073741826, 65553, 262140, 1073741826, 65553, 262141, 1073741826, 65553, 262142, 1073741826, 16, 262143, 1073741826, 65553, 196608, 1073741826, 65553, 196609, 1073741826, 16, 196610, 1073741826, 16, 196611, 1073741826, 16, 196612, 1073741826, 16, 196613, 1073741826, 65553, 196614, 1073741826, 16, 196615, 1073741826, 16, 196616, 1073741826, 16, 196617, 1073741826, 16, 196618, 1073741826, 16, 196619, 1073741826, 65553, 327671, 1073741826, 131081, 327672, 1073741826, 16, 327673, 1073741826, 65553, 327674, 1073741826, 65553, 327675, 1073741826, 65553, 327676, 1073741826, 65553, 327677, 1073741826, 65553, 327678, 2, 16, 327679, 1073741826, 65553, 262144, 1073741826, 65553, 262145, 2, 65553, 262146, 1073741826, 16, 262147, 1073741826, 16, 262148, 1073741826, 16, 262149, 1073741826, 16, 262150, 1073741826, 16, 262151, 1073741826, 16, 262152, 1073741826, 16, 262153, 1073741826, 16, 262154, 1073741826, 65553, 262155, 1073741826, 65553, 393207, 1073741826, 131081, 393208, 1073741826, 65553, 393209, 1073741826, 65553, 393210, 1073741826, 65553, 393211, 1073741826, 65553, 393212, 1073741826, 65553, 393213, 2, 65553, 393214, 2, 16, 393215, 2, 16, 327680, 2, 16, 327681, 2, 16, 327682, 2, 16, 327683, 1073741826, 16, 327684, 1073741826, 16, 327685, 2, 65553, 327686, 1073741826, 65553, 327687, 1073741826, 16, 327688, 1073741826, 65553, 327689, 1073741826, 65553, 327690, 1073741826, 65553, 327691, 1073741826, 65553, 458743, 1073741826, 131081, 458744, 2, 65553, 458745, 2, 65553, 458746, 2, 65553, 458747, 1073741826, 65553, 458748, 1073741826, 65553, 458749, 2, 65553, 458750, 2, 65553, 458751, 2, 65553, 393216, 2, 16, 393217, 2, 16, 393218, 2, 16, 393219, 2, 16, 393220, 2, 65553, 393221, 2, 16, 393222, 2, 16, 393223, 1073741826, 16, 393224, 1073741826, 65553, 393225, 1073741826, 65553, 393226, 1073741826, 65553, 393227, 1073741826, 65553, 524279, 1073741826, 131081, 524280, 1073741826, 65553, 524281, 1073741826, 65553, 524282, 1073741826, 65553, 524283, 1073741826, 65553, 524284, 2, 65553, 524285, 2, 65553, 524286, 2, 65553, 524287, 2, 65553, 458752, 2, 65553, 458753, 2, 65553, 458754, 2, 65553, 458755, 2, 16, 458756, 2, 16, 458757, 2, 16, 458758, 2, 16, 458759, 1073741826, 65553, 458760, 1073741826, 65553, 458761, 1073741826, 65553, 458762, 1073741826, 65553, 458763, 2, 131077, 589815, 1073741826, 9, 589816, 2, 65545, 589817, 2, 65545, 589818, 2, 65545, 589819, 2, 65545, 589820, 2, 65545, 589821, 2, 65545, 589822, 2, 65545, 589823, 2, 65545, 524288, 2, 65545, 524289, 2, 65545, 524290, 2, 65545, 524291, 2, 65545, 524292, 2, 65545, 524293, 2, 65545, 524294, 2, 65545, 524295, 2, 65545, 524296, 2, 131079, 524297, 2, 131079, 524298, 2, 131079, 524299, 2, 8 )

[node name="ForegroundTileMap" type="TileMap" parent="."]
tile_set = ExtResource( 6 )
cell_size = Vector2( 16, 16 )
show_collision = true
collision_use_kinematic = true
collision_bounce = 0.24
collision_mask = 2
format = 1
tile_data = PoolIntArray( 65543, 14, 5, 196616, 15, 8, 196617, 15, 9, 262151, 15, 262151, 262152, 15, 65544, 262153, 15, 65545, 458751, 15, 4, 393216, 15, 5, 524280, 15, 262144, 524287, 15, 65540, 458752, 15, 65541, 458756, 15, 262153, 458757, 15, 262154 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( -60, -54 )

[node name="AnimatedSprite" parent="Player" index="1"]
frame = 1

[node name="Items" type="Node2D" parent="Player"]
position = Vector2( 55, 55 )

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true
zoom = Vector2( 0.6, 0.6 )
editor_draw_limits = true

[node name="ItemGiver" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Enemy" parent="." instance=ExtResource( 17 )]

[connection signal="gainedExperience" from="Player/ExperienceSystem" to="UICanvasLayer/UI/LevelNumber/ExpBar" method="_on_ExperienceSystem_gainedExperience"]
[connection signal="leveledup" from="Player/ExperienceSystem" to="UICanvasLayer/UI/LevelNumber/Label" method="_on_ExperienceSystem_leveledup"]
[connection signal="damageTaken" from="Player/Health" to="UICanvasLayer/UI/HPbar" method="_on_Health_damageTaken"]
[connection signal="healthDepleted" from="Player/Health" to="UICanvasLayer/UI/GameOver" method="_on_Health_healthDepleted"]

[editable path="UICanvasLayer/UI"]
[editable path="Player"]
